# agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  sample.py
server/: __init__.py  main.py
server/api/: __init__.py  app.py  apply.py  docs.py  exception_handlers.py  health.py  middleware.py  models.py  root.py
server/api/templates/: docs.html  health.html  home.html
server/utils/: browser.py  profile.py  prompt.py  resume.py  webhook.py
server/utils/tools/: auth.py  playwright.py  user.py
