[project]
name = "stapply-agent"
version = "0.1.0"
description = "StApply AI Agent and FastAPI server"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Stapply" }]
dependencies = [
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.30.0",
    "pydantic~=2.9.0",
    "python-multipart~=0.0.9",
    "python-dotenv~=1.0.1",
    "playwright~=1.47.0",
    "aiohttp~=3.9.5",
    # The following packages are kept unpinned due to uncertain upstream versioning
    "kernel",
    "browser-use",
]

[tool.uv]
dev-dependencies = []


